edits throughout guide after results of testing

--- a/doc-Installing_on_OpenShift_Container_Platform/topics/installation.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/installation.adoc
@@ -7,7 +7,16 @@ This procedure uses a template to deploy a multi-pod {product-title_short} appli
 
 The ultimate goal of the deployment is to be able to deconstruct the {product-title_short} appliance into several containers running on a pod or a series of pods. 
 
-Running the {product-title_short} appliance in a series of pods has several advantages. For example, running each worker in a separate pod allows OpenShift Container Platform to manage worker processes and reduce worker memory consumption. OpenShift can also easily scale workers by adding or removing pods, and perform upgrades by using images. (OpenShift also provides built-in health Check like probing HTTP which can be used to understand health and alerts??)
+Running the {product-title_short} appliance in a series of pods has several advantages. For example, running each worker in a separate pod allows OpenShift Container Platform to manage worker processes and reduce worker memory consumption. OpenShift can also easily scale workers by adding or removing pods, and perform upgrades by using images.
+
+There are two options for installing {product-title_short} on OpenShift:
+
+* During OpenShift Container Platform 3.7 installation:
+** When you install OCP 3.7, you have the option to install {product-title_short} inside OpenShift at the time. This method leverages the Ansible installer to run and deploy the {product-title_short} template, instead of building the environment manually. See [OPENSHIFT GUIDE] for details.
+* Manual install on an existing OpenShift Container Platform environment:
+** Deploy {product-title_short} pods using the {product-title_short} template (yaml files). This is the method described in this guide.
+
+After deployment, you can configure the {product-title_short} environment to use any external authentication configurations supported by {product-title_short}.
 
 [[prerequisites]]
 === Prerequisites
@@ -22,30 +31,6 @@ To successfully deploy a {product-title_short} appliance on OpenShift Container 
 ====
 OpenShift Container Platform 3.7 is required for this installation. Red Hat has not tested this procedure with earlier versions of OpenShift Container Platform.
 ====
-
-The {product-title_short} deployment uses three files to create the appliance: `cfme-template.yaml`, which is the {product-title_short} template used for the deployment, and `cfme-pv-example.yaml` and `cfme-pv-app-example.yaml`, two pod volume files. 
-
-_These template files, and others, are available in OpenShift 3.7. They can also be found in GitHub (supported?):_ https://github.com/openshift/openshift-ansible/tree/master/roles/openshift_examples/files/examples/v3.7/cfme-templates
-
-These files create the OpenShift pods comprising the appliance, and are available from the https://access.redhat.com/containers/?product=Red%20Hat%20CloudForms%20#/search/cloudforms[Red Hat Container Catalog]:
-
-
-Pods for (each is a pod):
-
-// Check these.
-* {product-title_short} appliance image
-* Memcached image
-* PostgreSQL image
-* Embedded Ansible image 
-* Apache image
-
-To download the files to your system, navigate to each container image page, and click the *Get this image* tab. Select *Red Hat OpenShift* from the *Choose your platform:* list, then follow the instructions on that page to pull the image to your system.
-
-//Download them first? Refer to another section for instructions?
-
-/////
-OpenShift Container Platform 3.5 includes these files by default.
-/////
 
 ==== Cluster Sizing
 
@@ -65,49 +50,38 @@ The following limitations exist when deploying this version of {product-title_sh
 
 * This configuration cannot run on public OpenShift (OpenShift.io and OpenShift Dedicated environments) because of necessary privileges
 * The Embedded Ansible pod must run as a privileged pod
-* OpenShift cannot independently scale workers - can't just scale a particular role. 
-* A highly available database is not supported in Postgres pods
-* Httpd + cfme-app set both do some LB (rewrite and explain) 15:13 - there is some overlap between pods doing load balancing. (still don't get it)
+* OpenShift cannot independently scale workers 
+* A highly available database is not supported in PostgreSQL pods
 
 
-External auth 
-- all external authentication configurations supported by CloudForms are supported in this config. (happens in the Apache pod)
-IPA - user/password, Kerberos SSO. OTYP
-Active Directory - user/password, kerberos  SSO
-LDAP - user/password
-SAML/Keycloak
+==== Templates and Images
 
+The {product-title_short} deployment uses three files to create the appliance: `cfme-template.yaml`, which is the {product-title_short} template used for the deployment, and `cfme-pv-example.yaml` and `cfme-pv-app-example.yaml`, two pod volume files. 
 
-17:49
-2 options. 
-  
-- When you install OCP 3.7, you have the option to install CloudForms inside OPenshift at the time. Leverages the Ansible installer to run and deploy the CloudForms template. (Ansible does it instead oif manual building)
+_These template files, and others, are available in OpenShift 3.7. They can also be found in GitHub (supported?):_ https://github.com/openshift/openshift-ansible/tree/master/roles/openshift_examples/files/examples/v3.7/cfme-templates
 
-  * find out - is this documented in the OpenShift installation guide? Maybe they should point to this guide for if they don't want to install CF at installation time.
+These image files create the OpenShift pods comprising the appliance, and are available from the https://access.redhat.com/containers/?product=Red%20Hat%20CloudForms%20#/search/cloudforms[Red Hat Container Catalog]:
 
-- Install manually using the CloudForms openshift template (yaml files)
+// Check these.
+* {product-title_short} appliance image ?
+* Memcached image
+* PostgreSQL image
+* Embedded Ansible image ?
+* Httpd image
 
+To download the files to your system, navigate to each container image page, and click the *Get this image* tab. Select *Red Hat OpenShift* from the *Choose your platform:* list, then follow the instructions on that page to pull the image to your system.
 
-Multi-pod appliance
-DB stored in PV
-statefulset for server appliance also stored in a persistent volume
-Requirements 
-OpenShift 3.7 
-NFS or other volume provider(do not use NFS for Database) - NFS mount
-Cluster-admin access - for security contexts
+//Download them first? Refer to another section for instructions?
 
-recommendations
-1 x Master node - 8 vCPU, 12GB memory
-2 x schedulable nodes - 4 vCPU, 8GB memory
-20GB bare minimum storage for CFME PVs
-
-
+/////
+OpenShift Container Platform 3.5 includes these files by default.
+/////
 
 
 [[preparing-for-deployment]]
 === Preparing to Deploy {product-title_short}
 
-To prepare for deploying the {product-title_short} appliance to OpenShift Container Platform, create a project, configure security contexts, and create pod volumes.
+To prepare for deploying the {product-title_short} appliance to OpenShift Container Platform, create a project, configure security contexts, and create persistent storage.
 
 . As a regular user, log in to OpenShift: 
 +
@@ -169,7 +143,7 @@ Users:					system:serviceaccount:<your-project>:cfme-anyuid,system:serviceaccoun
 $ oc describe scc privileged | grep Users
 Users:					system:admin,system:serviceaccount:openshift-infra:build-controller,system:serviceaccount:management-infra:management-admin,system:serviceaccount:management-infra:inspector-admin,system:serviceaccount:logging:aggregated-logging-fluentd,system:serviceaccount:<your-project>:cfme-privileged
 ----
-+
+
 . Add the `view` and `edit` roles to the `cfme-orchestrator` service account:
 +
 ----
@@ -177,40 +151,11 @@ $ oc policy add-role-to-user view system:serviceaccount:<your-project>:cfme-orch
 $ oc policy add-role-to-user edit system:serviceaccount:<your-project>:cfme-orchestrator -n <your-project>
 ----
 +
-
-//TODO: Add more verification commands above.
-
-////
-
-MOVE VERIFY STEPS DOWN
-.. Verify that the `cfme-anyuid` service account is now included in the `anyuid` SCC:
-+
-------
-$ oc describe scc anyuid | grep Users
-Users:					system:serviceaccount:<your-project>:cfme-anyuid
-------
-+
-. Add your default service account to the `privileged` security context. The default service account for your project (project) must be added to the `privileged` security context constraints (SCCs) before they can run privileged pods.
-+
-.. As the admin user, add the default service account by running:
-+
-------
-$ oc adm policy add-scc-to-user privileged system:serviceaccount:<your-project>:default
-------
-+
-.. Verify that your default service account is now included in the `privileged` security context constraints (SCCs):
-+
-------
-$ oc describe scc privileged | grep Users
-Users:                  system:serviceaccount:openshift-infra:build-controller,system:serviceaccount:management-infra:management-admin,system:serviceaccount:management-infra:inspector-admin,system:serviceaccount:default:router,system:serviceaccount:default:registry,system:serviceaccount:<your-project>:default
-------
-+
-////
-. Prepare persistent storage for the deployment. (Skip this step if you have already configured persistent storage.) 
+. As the admin user, prepare persistent storage for the deployment. (Skip this step if you have already configured persistent storage.) 
 +
 A basic {product-title_short} deployment needs at least two persistent volumes (PVs) to store {product-title_short} data. As the admin user, create two persistent volumes: one to host the {product-title_short} PostgreSQL database, and one to host the application data. 
 +
-Example NFS-backed volume templates are provided by `cfme-pv-db-example.yaml` and `cfme-pv-server-example.yaml`, available from https://github.com/openshift/openshift-ansible/tree/master/roles/openshift_examples/files/examples/v1.5/cfme-templates/[GitHub]. 
+Example NFS-backed volume templates are provided by `cfme-pv-db-example.yaml` and `cfme-pv-server-example.yaml`, available from https://github.com/openshift/openshift-ansible/tree/master/roles/openshift_examples/files/examples/v1.7/cfme-templates/[GitHub]. 
 +
 [NOTE]
 ====
@@ -228,13 +173,31 @@ $ oc create -f cfme-pv-db-example.yaml
 $ oc create -f cfme-pv-server-example.yaml
 ------
 +
-.. Verify the pod volumes were created successfully: 
+.. Process the templates, editing the NFS_HOST parameter (mandatory) and any other parameters:
++ 
+----
+$ oc process cfme-pv-db-example.yaml -p NFS_HOST=nfs.example.com | oc create -f -
+
+$ oc process cfme-pv-server-example.yaml -p NFS_HOST=nfs.example.com | oc create -f -
+----
++
+[NOTE]
+====
+There are three parameters required to process the template. Only NFS_HOST is required, PV_SIZE and BASE_PATH contain defaults that do not need editing unless desired:
+
+* PV_SIZE - Defaults to the recommended PV size for the App/DB template (5Gi/15Gi respectively)
+* BASE_PATH - Defaults to /exports
+* NFS_HOST - No Default - Hostname or IP address of the NFS server
+====
++
+.. Verify the persistent volumes were created successfully: 
 +
 ------
 $ oc get pv
-NAME       CAPACITY   ACCESSMODES   RECLAIMPOLICY   STATUS      CLAIM  REASON   AGE
-cfme-pv01   15Gi        RWO           Recycle         Available                   30s
-cfme-pv02   5Gi         RWO           Recycle         Available                   19s
+NAME                CAPACITY   ACCESSMODES   RECLAIMPOLICY   STATUS      CLAIM         STORAGECLASS   REASON    AGE
+cfme-app            5Gi        RWO           Retain          Available                                          16s
+
+cfme-db             15Gi       RWO           Retain          Available                                          49s
 ------
 +
 [NOTE]
@@ -352,9 +315,10 @@ The first deployment can take several minutes to complete while OpenShift downlo
 ------
 $ oc get pod
 NAME                 READY     STATUS    RESTARTS   AGE
-cloudforms-1-fzwzm   1/1       Running   0          4m
-memcached-1-6iuxu    1/1       Running   0          4m
-postgresql-1-2kxc3   1/1       Running   0          4m
+cloudforms-0         1/1       Running   0          4m
+httpd-1-w486v        1/1       Running   0          4m
+memcached-1-4xtjc    1/1       Running   0          4m
+postgresql-1-n5tm6   1/1       Running   0          4m
 ------
 +
 .. Export the configuration of the pod: 
@@ -429,34 +393,27 @@ The configuration change trigger is kept enabled; to have full control of your d
 
 === Logging into {product-title_short}
 
-Once the pods have been successfully deployed, you can log into {product-title_short} and perform administration tasks. 
+As part of the deployment, a route to the {product-title_short} appliance is created for HTTPS access. 
+Once the pods have been successfully deployed, you can log into {product-title_short}.
 
-You can obtain host information to log into the appliance from the project in the OpenShift user interface, or by opening a shell on the pod and getting the route information:
+You can obtain the {product-title_short} host address from the project in the OpenShift user interface, or by opening a shell on the pod and getting the route information. 
 
 . To open a shell on the pod, run:
++
 ----
 $ oc rsh <pod_name> bash -l
 ----
 +
-. Get the route information
+. Get the route information:
++
 ----
 $ oc get routes
 NAME         HOST/PORT                   PATH                SERVICE      TERMINATION   LABELS
 cloudforms   cfme.apps.e2e.example.com  cloudforms:443-tcp   passthrough                app=cloudforms
 ----
-
-A route should have been deployed via template for HTTPS access on the {product-title_short} pod. Examine the output and point your web browser to the reported URL/host (in this example, `cfme.apps.e2e.example.com`).
-
-.  Navigate to the URL for the login screen. (https://xx.xx.xx.xx on the virtual machine instance)
-.  Enter the default credentials (Username: *admin* | Password: *smartvm*) for the initial login.
+. Navigate to the reported URL/host on a web browser (in this example, `cfme.apps.e2e.example.com`).
+.  Enter the default {product-title_short} credentials (Username: *admin* | Password: *smartvm*) for the initial login.
 .  Click *Login*.
-
-////
-
-[[pod-access-and-routes]]
-==== Obtaining Pod Access and Routes
-is this the same as finding out how to log into the new cloudforms appliance? 
-//// 
 
 
 
