--- a/doc-REST_API/topics/chap-Examples.adoc
+++ b/doc-REST_API/topics/chap-Examples.adoc
@@ -74,7 +74,7 @@ include::provision_requests.adoc[]
 
 include::monitoring_request.adoc[]
 
-INCLUDE::auto-placement-provisioning-request.adoc[]
+include::auto-placement-provisioning-request.adoc[]
 
 [[_sect_providers]]
 === Providers
