--- a/doc-Scripting_Actions/topics/Filtering-Actions-for-Custom-Buttons.adoc
+++ b/doc-Scripting_Actions/topics/Filtering-Actions-for-Custom-Buttons.adoc
@@ -1,11 +1,33 @@
 [[filtering-actions-custom-buttons]]
 
-= Applying Filtering Actions to Custom Buttons
+=== Applying Visibility and Enablement Filtering Actions to Custom Buttons
 
-{product-title} add functionality for evaluating the expression that determines whether a custom button is shown and enabled. Set custom buttons states to visible, hidden, or diabled.
+{product-title} add methods for evaluating an expression to determine whether a custom button is visible and enabled. Each method has a target object, for example, a virtual machine or host, and expressions can set a custom button to visible, hidden, or disabled.
 
 [NOTE]
 ====
-If no expression is chosen, the 
+Filtering works on single objects and is not applicable to lists.
 ====
-  
+
+To apply filtering actions to a custom button:
+
+. Navigate to menu:Automation[Automate > Customization].
+
+. Click the *Buttons* accordion. Select the custom button to use. 
+
+. Click the *Advanced* tab. 
+
+. To set enablement filtering on a custom button:
+.. Under *Enablement*, click on *Define Expression*.
+.. Create a visibility expression using the expression editor tools. 
+.. Click image:1863.png[Confirm] (*Confirm*) when finished defining the expression. 
+.. Provide *Disabled Button Text* in the field. 
+
+. To set visibility fitlerting on a custom button:
+.. Under *Visibility*, click on *Define Expression*.
+.. Create a visibility expression using the expression editor tools. 
+.. Click image:1863.png[Confirm] (*Confirm*) when finished defining the expression. 
+
+. Click *Save*. 
+
+
