add procedure on applying filtering to custom button

--- a/doc-Scripting_Actions/topics/chap_invoking_automate.adoc
+++ b/doc-Scripting_Actions/topics/chap_invoking_automate.adoc
@@ -15,6 +15,8 @@ include::To_edit_a_custom_button1.adoc[]
 
 include::To_delete_a_custom_button1.adoc[]
 
+include::Filtering-Actions-for-Custom-Buttons.adoc[]
+
 include::To_use_a_custom_button1.adoc[]
 
 include::Initiating_Automate_from_an_Event1.adoc[]
