Added Config > Edit button step
Added the missing step to click the Config > Edit this buttons, and fixed a typo.

--- a/doc-Scripting_Actions/topics/Filtering-Actions-for-Custom-Buttons.adoc
+++ b/doc-Scripting_Actions/topics/Filtering-Actions-for-Custom-Buttons.adoc
@@ -15,6 +15,8 @@ To apply filtering actions to a custom button:
 
 . Click the *Buttons* accordion. Select the custom button to use. 
 
+. Click image:../images/1847.png[image](*Configuration*), then image:../images/1851.png[image] (*Edit this Button*).
+
 . Click the *Advanced* tab. 
 
 . To set enablement filtering on a custom button:
@@ -23,7 +25,7 @@ To apply filtering actions to a custom button:
 .. Click image:1863.png[Confirm] (*Confirm*) when finished defining the expression. 
 .. Provide *Disabled Button Text* in the field. 
 
-. To set visibility fitlerting on a custom button:
+. To set visibility filtering on a custom button:
 .. Under *Visibility*, click on *Define Expression*.
 .. Create a visibility expression using the expression editor tools. 
 .. Click image:1863.png[Confirm] (*Confirm*) when finished defining the expression. 
