--- a/doc-Scripting_Actions/topics/Filtering-Actions-for-Custom-Buttons.adoc
+++ b/doc-Scripting_Actions/topics/Filtering-Actions-for-Custom-Buttons.adoc
@@ -2,7 +2,7 @@
 
 === Applying Visibility and Enablement Filtering Actions to Custom Buttons
 
-{product-title} add methods for evaluating an expression to determine whether a custom button is visible and enabled. Each method has a target object, for example, a virtual machine or host, and expressions can set a custom button to visible, hidden, or disabled.
+{product-title} adds methods for evaluating an expression to determine whether a custom button is visible and enabled. Each method has a target object, for example, a virtual machine or host, and expressions can set a custom button to visible, hidden, or disabled.
 
 [NOTE]
 ====
