Updated the sections Accessing the SSUI and Navigating the SSUI with the changes for 4.6 GA.

--- a/doc-Self_Service_User_Interface_Guide/topics/Accessing_Self_Service_UI.adoc
+++ b/doc-Self_Service_User_Interface_Guide/topics/Accessing_Self_Service_UI.adoc
@@ -12,9 +12,24 @@ https://_HOSTNAME_/self_service/
 
 image:ssui-login-nb.png[Self Service Login Screen]
 
-You can choose your preferred language for the Self Service user interface from the options in the *Language* list available on the login screen. The language options are _English_, _Español_ (Spanish), _Français_ (French), _日本語_ (Japanese), _Nederlands_ (Dutch), _Português_ (Portuguese), and _简体中文_ (Simplified Chinese). Additionally, the _User Default_ and _Browser Default_ options default to the language already set by the user or browser respectively. 
+You can choose your preferred language for the Self Service user interface from the options in the *Language* list available on the login screen. The following languages are supported:
 
+* English
+* Español (Spanish)
+* Français (French)
+* 日本語 (Japanese)
+*  한국어 (Korean)
+* Nederlands (Dutch)
+* Português (Portuguese)
+* Português do Brasil (Brazilian Portuguese)
+* 简体中文 (Simplified Chinese)
+* Traditional Chinese 
+
+Additionally, the _User Default_ and _Browser Default_ options default to the language already set by the user or browser respectively. 
+
+////
 [NOTE]
 ====
 The Self Service user interface login page has the *Administrator* user by default. 
 ====
+////
