added note to managing quota section about changing groups, added screenshot and brief note in groups section, in case users are looking there

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2062,6 +2062,11 @@ To create a project:
 
 Use the following procedure to allocate or edit quotas for tenants and projects.
 
+[NOTE]
+====
+Quota is allocated based on the user's current group. If the user belongs to multiple groups, you must change to the desired group before allocating or editing group quota. See xref:groups[] for more details.
+====
+
 . From the settings menu, select *Configuration*.
 . Click on the *Access Control* accordion, then click *Tenants*.
 . Click on the *Tenant* or *Project* where you want to add a quota, click image:1847.png[] (*Configuration*), and image:1851.png[] (*Manage quotas for the Selected Item*) to create a quota.
@@ -2143,6 +2148,13 @@ See _Assigning CloudForms Account Roles Using LDAP Groups_ in _Managing Authenti
 ====
 endif::miq[]
 
+
+If a user belongs to multiple groups, you can change the user's current group by navigating to the settings menu, clicking *Change Group*, then selecting the desired group. The *Current Group* affects quota and other settings for the user.
+
+image:change_group.png[]
+
+
+
 [[creating-a-user-group]]
 ==== Creating a Group
 
@@ -2174,8 +2186,6 @@ After creating a group, assign one or more users to the group by editing a user.
 When you create a group, you must specify a role to give the group rights to resources in the console. The group's role determines the scope of access for the users that are members of the group.
 
 image:CloudForms_General_Config_Roles_460469_1017_JCS.png[]
-
-A group can only be assigned one role when the local database is used for authentication, as shown in the above image.
 
 {product-title} provides a default group of roles, but you can also create your own, or copy and edit the default groups.
 
