added note to managing quota section about changing groups, added screenshot and brief note in groups section, in case users are looking there

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2027,6 +2027,11 @@ To create a project:
 
 Use the following procedure to allocate or edit quotas for tenants and projects.
 
+[NOTE]
+====
+Quota is allocated based on the user's current group. If the user belongs to multiple groups, you must change to the desired group before allocating or editing group quota. See xref:groups[] for more details.
+====
+
 . From the settings menu, select *Configuration*.
 . Click on the *Access Control* accordion, then click *Tenants*.
 . Click on the *Tenant* or *Project* where you want to add a quota, click image:1847.png[] (*Configuration*), and image:1851.png[] (*Manage quotas for the Selected Item*) to create a quota.
@@ -2091,6 +2096,13 @@ A user can only belong to one group, and a group can only be assigned one accoun
 ====
 To assign account roles using LDAP groups, see xref:assigning_account_roles_using_ldap_groups[].
 ====
+
+
+If a user belongs to multiple groups, you can change the user's current group by navigating to the settings menu, clicking *Change Group*, then selecting the desired group. The *Current Group* affects quota and other settings for the user.
+
+image:change_group.png[]
+
+
 
 [[creating-a-user-group]]
 ==== Creating a Group
