--- a/common/openstack/adding-an-openstack-cloud-provider.adoc
+++ b/common/openstack/adding-an-openstack-cloud-provider.adoc
@@ -5,7 +5,7 @@ When using the `admin` credentials, a user in {product-title} provisions into th
 
 [NOTE]
 ====
-In OpenStack, you must add `admin` as a member of all tenants that users want to access and use in {product-title_short}.
+In OpenStack, you must add `admin` as a member of all tenants that users want to access and use in {product-title_short}. See  https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/deployment_planning_guide/#tenants[Tenancy] in the _Deployment Planning Guide_ for more details on tenancy in {product-title_short}.
 ====
 
 include::tenant-mapping.adoc[]
@@ -25,11 +25,11 @@ To authenticate the provider using a self-signed Certificate Authority (CA), con
 
 . Navigate to menu:Compute[Clouds > Providers].
 
-. Click  image:1847.png[] (*Configuration*), then click  image:1848.png[] (*Add a New Cloud Provider*).
+. Click  image:1847.png[] (*Configuration*), then click  image:1862.png[] (*Add a New Cloud Provider*).
 
 . Enter a *Name* for the provider.
 
-. From the *Type* drop down menu select *OpenStack*.
+. From the *Type* list, select *OpenStack*.
 
 . Select the appropriate *API Version* from the list. The default is `Keystone v2`.
 +
@@ -39,10 +39,11 @@ If you select `Keystone v3`, enter the `Keystone V3 Domain ID` that {product-tit
 =========
 include::osp-keystone-api-v3.adoc[]
 =========
+. Enter a region number in *Region*.
 
 . By default, _tenant mapping_ is disabled. To enable it, set *Tenant Mapping Enabled* to *Yes*.
 
-. Select the appropriate *Zone* for the provider. By default, the zone is set to *default*.
+. Select the appropriate *Zone* for the provider. If you do not specify a zone, it is set to `default`. 
 +
 NOTE: For more information, see the definition of host aggregates and availability zones in https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/{osp-ver}/html/architecture_guide/components#comp-compute[OpenStack Compute (nova)] in the Red Hat OpenStack Platform _Architecture Guide_.
 
