update with reviewer feedback

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_Cloud_Network.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_Cloud_Network.adoc
@@ -5,8 +5,8 @@
 
 Add a new cloud network following the steps in this procedure:
 
-. Navigate to menu:Networks > Networks. 
-. Click image:1847.png(Configuration) and click *Add a new Cloud Network*.
+. Navigate to menu:Networks[Networks]. 
+. Click image:1847.png[Configuration](*Configuration*) and click *Add a new Cloud Network*.
 . In the *Network Providers* area, select a *Network Manager* from the drop-down menu.
 . Under *Placement*, select a *Cloud Tenant*. 
 . In the *Network Provider Information* section, choose a *Provider Network Type*. 
