--- a/doc-Managing_Infrastructure_and_Inventory/topics/Adding_an_Interface_to_Network_Router.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Adding_an_Interface_to_Network_Router.adoc
@@ -7,6 +7,6 @@ To add an interface to a network router:
 
 . Navigate to menu:Networks[Network Routers].
 . Select a network router from the list view. 
-. Click  image:1847.png[Configuration] (*Configuration*), then  image:1851.png[Add Interface to selected Router] (*Add Interface to selected Router*).
-. Select a *Subnet* from the drop-down menu. 
+. Click  image:1847.png[Configuration] (*Configuration*), then  image:1851.png[Add Interface to this Router] (*Add Interface to this Router*).
+. Select a *Subnet* from the list. 
 . Click *Add*. 
