--- a/doc-Managing_Infrastructure_and_Inventory/topics/Deleting_a_Router.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Deleting_a_Router.adoc
@@ -6,4 +6,4 @@ To delete a network router:
 
 . Navigate to menu:Networks[Network Routers].
 . Select a network router from the list view. 
-. Click image:1847.png[Configuration](*Configuration*), then click *Delete selected Routers. 
+. Click image:1847.png[Configuration](*Configuration*), then click *Delete selected Routers*. 
