--- a/doc-Managing_Infrastructure_and_Inventory/topics/Networks.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Networks.adoc
@@ -8,7 +8,7 @@ Create a network to provide instances a place to communicate internally and rece
 [NOTE]
 ====
 * Keystone API v3 is required to create cloud tenants on Red Hat OpenStack Platform cloud providers. For more information, see https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/11/html-single/architecture_guide/#comp-identity[OpenStack Identity (keystone)] in the Red Hat OpenStack Platform _Architecture Guide_.
-* Please see the link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/12/html-single/networking_guide/#add_an_interface[_Networking Guide_] in the Red Hat OpenStack Platform documentation for further details on cloud network objects and administration. 
+* For further details on cloud network objects and administration, see the link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/12/html-single/networking_guide/#add_an_interface[_Networking Guide_] in the Red Hat OpenStack Platform documentation.. 
 ====
 
 include::Adding_a_Cloud_Network.adoc[]
