--- a/doc-Self_Service_User_Interface_Guide/topics/Navigating_Self_Service_UI.adoc
+++ b/doc-Self_Service_User_Interface_Guide/topics/Navigating_Self_Service_UI.adoc
@@ -32,7 +32,7 @@ Click the help icon to access the options to open *Documentation*, *Red Hat Cust
 
 [NOTE]
 ====
-The resources linked to in the help icon will be, by default, the ones listed above, however the system administrator can change them to other resources as required for the logged in user.
+The resources linked to in the help icon will be, by default, the ones listed above. System administrators can change them to other resources as required for the logged in user.
 ====
 
 Role-Based Access Control::
