--- a/doc-Managing_Authentication/topics/External_auth_troubleshooting.adoc
+++ b/doc-Managing_Authentication/topics/External_auth_troubleshooting.adoc
@@ -7,7 +7,7 @@ Using the appliance_console to generate External HTTP Authentication generates t
 
 /etc/httpd/conf.d/manageiq-external-auth.conf
 /etc/sssd/sssd.conf
-With the above configuration files in place, HTTP will query, using dbus, SSSD which will perform the LDAP/S authentication and authorization steps necessary to validate users and groups.
+With the above configuration files in place, HTTP will query, using D-Bus, SSSD which will perform the LDAP/S authentication and authorization steps necessary to validate users and groups.
 
 ////
 
